force-app/main/default/objects/cf123__Form__c/fields/cf123__Active__c.field-meta.xml
<CustomField>
    <fullName>cf123__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>