force-app/main/default/objects/cf123__Form__c/fields/cf123__Automatic__c.field-meta.xml
<CustomField>
    <fullName>cf123__Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Automatic Integration</label>
    <type>Checkbox</type>
</CustomField>