force-app/main/default/objects/cf123__Form__c/fields/cf123__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>cf123__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>