force-app/main/default/objects/cf123__Form__c/fields/cf123__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cf123__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>