force-app/main/default/objects/cf123__Form__c/listViews/cf123__All.listView-meta.xml
<ListView>
    <fullName>cf123__All</fullName>
    <columns>NAME</columns>
    <columns>cf123__Active__c</columns>
    <columns>cf123__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>