force-app/main/default/objects/cf123__Form__c/listViews/cf123__This_Week.listView-meta.xml
<ListView>
    <fullName>cf123__This_Week</fullName>
    <columns>NAME</columns>
    <columns>cf123__External_Id__c</columns>
    <columns>cf123__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>